perlhist: Move 5.26.0 to another table to fix line length

--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -1003,25 +1003,47 @@ the Perl source distribution for somewhat more selected releases.
 
  ======================================================================
 
-                  5.20.0           5.22.0          5.24.0          5.26.0
+                  5.20.0           5.22.0          5.24.0
 
- Configure    552      1       570      1      586      1      593      1
- Cross        118     15       118     15      118     15      122     15
- djgpp         18      7        17      7       17      7       21      7
- h2pl          13     15        13     15       13     15       24     15
- hints        355     90       356     87      362     87      376     87
- mad          174      8         -      -        -      -        -      -
- NetWare      467     61       466     61      467     61      499     61
- os2          510     70       510     70      510     70      552     70
- plan9        316     17       317     17      314     17      322     17
- Porting     1204     68      1393     71     1321     71     1380     73
- qnx            1      4         1      4        1      4        5      4
- symbian      290     54       291     54      292     54      315     54
- utils        241     27       242     27      679     53      578     50
- vms          538     12       532     12      524     12      527     12
- vos            8      7         8      7        8      7       12      7
- win32       1183     64      1201     64     1268     65     1313     65
- x2p          341     19         -      -        -      -        -      -
+ Configure    552      1       570      1      586      1
+ Cross        118     15       118     15      118     15
+ djgpp         18      7        17      7       17      7
+ h2pl          13     15        13     15       13     15
+ hints        355     90       356     87      362     87
+ mad          174      8         -      -        -      -
+ NetWare      467     61       466     61      467     61
+ os2          510     70       510     70      510     70
+ plan9        316     17       317     17      314     17
+ Porting     1204     68      1393     71     1321     71
+ qnx            1      4         1      4        1      4
+ symbian      290     54       291     54      292     54
+ utils        241     27       242     27      679     53
+ vms          538     12       532     12      524     12
+ vos            8      7         8      7        8      7
+ win32       1183     64      1201     64     1268     65
+ x2p          341     19         -      -        -      -
+
+ ======================================================================
+
+                  5.26.0
+
+ Configure    593      1
+ Cross        122     15
+ djgpp         21      7
+ h2pl          24     15
+ hints        376     87
+ mad            -      -
+ NetWare      499     61
+ os2          552     70
+ plan9        322     17
+ Porting     1380     73
+ qnx            5      4
+ symbian      315     54
+ utils        578     50
+ vms          527     12
+ vos           12      7
+ win32       1313     65
+ x2p            -      -
 
 =head2 SELECTED PATCH SIZES
 
