--- a/Porting/release_schedule.pod
+++ b/Porting/release_schedule.pod
@@ -56,15 +56,15 @@ you should reset the version numbers to the next blead series.
 =head2 Perl 5.27
 
   2017-05-31  5.27.0 ✓        Sawyer X
-  2017-06-20  5.27.1          ?
-  2017-07-20  5.27.2          ?
-  2017-08-20  5.27.3          ?
-  2017-09-20  5.27.4          ?
-  2017-10-20  5.27.5          ?
+  2017-06-20  5.27.1          Eric Herman
+  2017-07-20  5.27.2          Aaron Crane
+  2017-08-20  5.27.3          Matthew Horsfall
+  2017-09-20  5.27.4          John Anderson
+  2017-10-20  5.27.5          Steve Hay
   2017-11-20  5.27.6          ?
-  2017-12-20  5.27.7          ?
+  2017-12-20  5.27.7          Karen Etheridge
   2018-01-20  5.27.8          ?
-  2018-02-20  5.27.9          ?
+  2018-02-20  5.27.9          Abigail
   2018-03-20  5.27.10         ?
 
 (RC0 for 5.28.0 will be released once we think that all the blockers have been
