--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -48,11 +48,11 @@ XXX For a release on a stable branch, this section aspires to be:
 =head2 Comma-less variable lists in formats are no longer allowed
 
 Omitting the commas between variables passed to formats is no longer
-allowed.  This has been deprecated since perl 5.000.
+allowed.  This has been deprecated since Perl 5.000.
 
 =head2 The C<:locked> and C<:unique> attributes have been removed
 
-These have been no-ops and deprecated since perl 5.12 and 5.10,
+These have been no-ops and deprecated since Perl 5.12 and 5.10,
 respectively.
 
 =head2 C<\N{}> with nothing between the braces is now illegal.
