--- a/pod/perldiag.pod
+++ b/pod/perldiag.pod
@@ -4275,21 +4275,21 @@ that isn't open.  Check your control flow.  See also L<perlfunc/-X>.
 
 (S internal) An internal warning that the grammar is screwed up.
 
-=item Opening dirhandle %s also as a file. This will be a fatal error in Perl 5.28
+=item Cannot open %s as a filehandle: it is already open as a dirhandle
 
-(D io, deprecated) You used open() to associate a filehandle to
+(F) You tried to use open() to associate a filehandle to
 a symbol (glob or scalar) that already holds a dirhandle.
-Although legal, this idiom might render your code confusing
-and this was deprecated in Perl 5.10. In Perl 5.28, this 
-will be a fatal error.
+This idiom might render your code confusing
+and this was deprecated in Perl 5.10. As of Perl 5.28, this
+is a fatal error.
 
-=item Opening filehandle %s also as a directory. This will be a fatal error in Perl 5.28
+=item Cannot open %s as a dirhandle: it is already open as a filehandle
 
-(D io, deprecated) You used opendir() to associate a dirhandle to
+(F) You tried to use opendir() to associate a dirhandle to
 a symbol (glob or scalar) that already holds a filehandle.
-Although legal, this idiom might render your code confusing
-and this was deprecated in Perl 5.10. In Perl 5.28, this 
-will be a fatal error.
+This idiom might render your code confusing
+and this was deprecated in Perl 5.10. As of Perl 5.28, this
+is a fatal error.
 
 =item Operand with no preceding operator in regex; marked by S<<-- HERE> in
 m/%s/
