XPUSH*: reuse code from mPUSH* macros

--- a/AUTHORS
+++ b/AUTHORS
@@ -402,6 +402,7 @@ Erich Rickheit
 Eryq				<eryq@zeegee.com>
 Etienne Grossman		<etienne@isr.isr.ist.utl.pt>
 Eugene Alterman			<Eugene.Alterman@bremer-inc.com>
+Eugen Konkov			<kes-kes@yandex.ru>
 Evan Miller			<eam@frap.net>
 Evan Zacks			<zackse@cpan.org>
 Fabien Tassin			<tassin@eerie.fr>
