--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -83,6 +83,10 @@ since Perl 5.20.
 
 This was deprecated since Perl 5.24.
 
+=head2 C<B::OP::terse> no longer exists.
+
+Use C<B::Concise::b_terse> instead.
+
 =head1 Deprecations
 
 XXX Any deprecated features, syntax, modules etc. should be listed here.
